@@ -1,6 +1,7 @@
 2018-09-05  Hanna Knutsson <hanna.knutsson@protonmail.com>
 
-	* Select whole number on double click on value field
+	* Select whole number on double click in value field
+	* Scroll to added/modified transaction
 
 2018-08-04  Hanna Knutsson <hanna.knutsson@protonmail.com>
 
